--- a/index.html
+++ b/index.html
@@ -401,5 +401,65 @@
                </div>
         </div>
     </footer>
+    <div class="backdrop is-open">
+        <div class="modal">
+            <button type="button" class="modal-btn">
+                <svg width="8" height="8" class="modal-btn-icon">
+                    <use href="./images/icons.svg#icon-close-black-18dp"></use>
+                </svg>
+            </button>
+            <p class="modal-title section-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+                <div class="modal-field">
+                    <label class="modal-label"><span class="label-text">Name</span>
+                        <div class="modal-input-wrap">
+                            <input 
+                            type="text" 
+                            name="user-name" 
+                            class="modal-input"
+                            >
+                            <svg class="modal-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                            </svg>
+                        </div>
+                    </label>
+                </div>
+                <div class="modal-field">
+                    <label class="modal-label"><span class="label-text">Phone</span>
+                        <div class="modal-input-wrap">
+                            <input 
+                            type="text" 
+                            name="user-tel" 
+                            class="modal-input"
+                            >
+                            <svg class="modal-icon" width="18" height="24">
+                                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                            </svg>
+                        </div>
+                    </label>
+                </div>
+                <div class="modal-field">
+                    <label class="modal-label"><span class="label-text">Email</span>
+                        <div class="modal-input-wrap">
+                            <input 
+                            type="text" 
+                            name="user-mail" 
+                            class="modal-input"
+                            >
+                            <svg class="modal-icon" width="18" height="24">
+                                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                            </svg>
+                        </div>
+                    </label>
+                </div>
+                <div class="modal-field">
+                    <label class="modal-label"><span class="label-text">Comment</span>
+                        <textarea name="user-text" id="user-text" class="modal-text" placeholder="Text input"></textarea>
+                    </label>
+                </div>
+                <button class="modal-send-btn" type="button"><span class="btn-txt">Send</span></button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
