--- a/index.html
+++ b/index.html
@@ -398,19 +398,20 @@
                                 </a>
                             </li>
                     </ul>
-                    
                </div>
                <div class="form-container">
-                <form class="footer-form">
-                    <label class="footer-label">
+                    <p class="footer-label-title">
                         Subscribe
-                        <input
-                        class="email-input" 
-                        type="text" 
-                        name="email" 
-                        placeholder="E-mail"
-                        >
-                    </label>
+                    </p>
+                    <form class="footer-form">
+                        <label class="footer-label">
+                            <input
+                            class="email-input" 
+                            type="email" 
+                            name="email" 
+                            placeholder="E-mail"
+                            >
+                        </label>
                     <button type="submit" class="email-btn">
                         Subscribe
                         <svg class="btn-icon" width="24" height="24">
