--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
             <button type="button" class="modal-btn">
                 <svg width="8" height="8" class="modal-btn-icon">
