--- a/index.html
+++ b/index.html
@@ -482,11 +482,11 @@
                     <input 
                         class="check-input visually-hidden" 
                         type="checkbox" 
-                        name="modal-check" 
+                        name="user-privacy" 
                         id="user-privacy"
                         value="true">
                     <label class="check-text" for="user-privacy">
-                        <span>
+                        <span class="span">
                             <svg class="modal-check-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
