--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                     <label class="modal-label" for="user-comment">Comment</label>
                         <textarea name="user-comment" id="user-comment" class="modal-text" placeholder="Text input"></textarea>
                 </div>
-                <div class="modal-check">
+                <div class="modal-field">
                     <input 
                         class="check-input visually-hidden" 
                         type="checkbox" 
