--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                                 </svg>
                             </div>                   
                 </div>
-                <div class="modal-field">
+                <div class="modal-check">
                     <label class="modal-label" for="user-comment">Comment</label>
                         <textarea name="user-comment" id="user-comment" class="modal-text" placeholder="Text input"></textarea>
                 </div>
